289900 - please use static factory methods for boxed primitives Changes new <Wrapperclass>(value) to <wrapperclass>.valueOf(value).  Excludes new BigDecimal(long/string/bigInt) and weaving changes - no tests added, passed LRG and JPA LRG reviewed by Guy Pelletier