@@ -239,7 +239,7 @@ public class QueryException extends ValidationException {
     }
     
     public static QueryException backupCloneIsDeleted(Object clone) {
-        Object[] args = { clone, clone.getClass(), new Integer(System.identityHashCode(clone)), CR };
+        Object[] args = { clone, clone.getClass(), Integer.valueOf(System.identityHashCode(clone)), CR };
 
         QueryException queryException = new QueryException(ExceptionMessageGenerator.buildMessage(QueryException.class, BACKUP_CLONE_DELETED, args));
         queryException.setErrorCode(BACKUP_CLONE_DELETED);
@@ -248,7 +248,7 @@ public class QueryException extends ValidationException {
 
     public static QueryException backupCloneIsOriginalFromParent(Object clone) {
         // need to be verified
-        Object[] args = { clone, clone.getClass(), new Integer(System.identityHashCode(clone)), CR };
+        Object[] args = { clone, clone.getClass(), Integer.valueOf(System.identityHashCode(clone)), CR };
 
         QueryException queryException = new QueryException(ExceptionMessageGenerator.buildMessage(QueryException.class, BACKUP_CLONE_IS_ORIGINAL_FROM_PARENT, args));
         queryException.setErrorCode(BACKUP_CLONE_IS_ORIGINAL_FROM_PARENT);
@@ -256,7 +256,7 @@ public class QueryException extends ValidationException {
     }
 
     public static QueryException backupCloneIsOriginalFromSelf(Object clone) {
-        Object[] args = { clone, clone.getClass(), new Integer(System.identityHashCode(clone)), CR };
+        Object[] args = { clone, clone.getClass(), Integer.valueOf(System.identityHashCode(clone)), CR };
 
         QueryException queryException = new QueryException(ExceptionMessageGenerator.buildMessage(QueryException.class, BACKUP_CLONE_IS_ORIGINAL_FROM_SELF, args));
         queryException.setErrorCode(BACKUP_CLONE_IS_ORIGINAL_FROM_SELF);
@@ -1010,7 +1010,7 @@ public class QueryException extends ValidationException {
     }
 
     public static QueryException reportQueryResultSizeMismatch(int expected, int retrieved) {
-        Object[] args = { new Integer(expected), new Integer(retrieved) };
+        Object[] args = { Integer.valueOf(expected), Integer.valueOf(retrieved) };
 
         QueryException queryException = new QueryException(ExceptionMessageGenerator.buildMessage(QueryException.class, REPORT_QUERY_RESULT_SIZE_MISMATCH, args));
         queryException.setErrorCode(REPORT_QUERY_RESULT_SIZE_MISMATCH);
