@@ -98,7 +98,7 @@ public class SessionLoaderException extends EclipseLinkException {
     }
 
     public static SessionLoaderException finalException(Vector exceptionList) {
-        Object[] args = { new Integer(exceptionList.size()) };
+        Object[] args = { Integer.valueOf(exceptionList.size()) };
 
         SessionLoaderException sessionLoaderException = new SessionLoaderException(ExceptionMessageGenerator.buildMessage(SessionLoaderException.class, FINAL_EXCEPTION, args));
         sessionLoaderException.setErrorCode(FINAL_EXCEPTION);
@@ -108,7 +108,7 @@ public class SessionLoaderException extends EclipseLinkException {
 
     //CR4142
     public static SessionLoaderException failedToParseXML(String message, int lineNumber, int columnNumber, Throwable exception) {
-        Object[] args = { message, new Integer(lineNumber), new Integer(columnNumber) };
+        Object[] args = { message, Integer.valueOf(lineNumber), Integer.valueOf(columnNumber) };
 
         SessionLoaderException sessionLoaderException = new SessionLoaderException(ExceptionMessageGenerator.buildMessage(SessionLoaderException.class, UNABLE_TO_PARSE_XML, args), exception);
         sessionLoaderException.setErrorCode(UNABLE_TO_PARSE_XML);
