@@ -69,27 +69,27 @@ public class StoredProcedureGenerator {
      */
     protected void buildIntToTypeConverterHash() {
         this.intToTypeConverterHash = new Hashtable();
-        this.intToTypeConverterHash.put(new Integer(8), Double.class);
-        this.intToTypeConverterHash.put(new Integer(-7), Boolean.class);
-        this.intToTypeConverterHash.put(new Integer(-3), Byte[].class);
-        this.intToTypeConverterHash.put(new Integer(-6), Short.class);
-        this.intToTypeConverterHash.put(new Integer(5), Short.class);
-        this.intToTypeConverterHash.put(new Integer(4), Integer.class);
-        this.intToTypeConverterHash.put(new Integer(2), java.math.BigDecimal.class);
-        this.intToTypeConverterHash.put(new Integer(6), Float.class);
-        this.intToTypeConverterHash.put(new Integer(1), Character.class);
-        this.intToTypeConverterHash.put(new Integer(12), String.class);
-        this.intToTypeConverterHash.put(new Integer(91), java.sql.Date.class);
-        this.intToTypeConverterHash.put(new Integer(93), java.sql.Timestamp.class);
-        this.intToTypeConverterHash.put(new Integer(3), java.math.BigDecimal.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(8), Double.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-7), Boolean.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-3), Byte[].class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-6), Short.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(5), Short.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(4), Integer.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(2), java.math.BigDecimal.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(6), Float.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(1), Character.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(12), String.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(91), java.sql.Date.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(93), java.sql.Timestamp.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(3), java.math.BigDecimal.class);
 
-        this.intToTypeConverterHash.put(new Integer(-5), java.math.BigDecimal.class);
-        this.intToTypeConverterHash.put(new Integer(7), Float.class);
-        this.intToTypeConverterHash.put(new Integer(-1), String.class);
-        this.intToTypeConverterHash.put(new Integer(92), Time.class);
-        this.intToTypeConverterHash.put(new Integer(-2), Byte[].class);
-        this.intToTypeConverterHash.put(new Integer(-4), Byte[].class);
-        //this.intToTypeConverterHash.put(new Integer(0),null.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-5), java.math.BigDecimal.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(7), Float.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-1), String.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(92), Time.class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-2), Byte[].class);
+        this.intToTypeConverterHash.put(Integer.valueOf(-4), Byte[].class);
+        //this.intToTypeConverterHash.put(Integer.valueOf(0),null.class);
     }
 
     /**
@@ -664,7 +664,7 @@ public class StoredProcedureGenerator {
      * return the class corresponding to the passed in JDBC type.
      */
     protected Class getFieldType(Object jdbcDataType) {
-        Integer key = new Integer(((Number)jdbcDataType).intValue());
+        Integer key = Integer.valueOf(((Number)jdbcDataType).intValue());
         return (Class)intToTypeConverterHash.get(key);
     }
 
