@@ -177,7 +177,7 @@ public class Oracle8Platform extends OraclePlatform {
             //for the time being, simply use Oracle api.
             blob.putBytes(1, (byte[])value);
             //impose the locallization
-            session.log(SessionLog.FINEST, SessionLog.SQL, "write_BLOB", new Long(blob.length()), field.getNameDelimited(this));
+            session.log(SessionLog.FINEST, SessionLog.SQL, "write_BLOB", Long.valueOf(blob.length()), field.getNameDelimited(this));
         } else if (isClob(field.getType())) {
             oracle.sql.CLOB clob = (oracle.sql.CLOB)resultSet.getObject(field.getNameDelimited(this));
 
@@ -185,7 +185,7 @@ public class Oracle8Platform extends OraclePlatform {
             //for the time being, simply use Oracle api.
             clob.putString(1, (String)value);
             //impose the locallization
-            session.log(SessionLog.FINEST, SessionLog.SQL, "write_CLOB", new Long(clob.length()), field.getNameDelimited(this));
+            session.log(SessionLog.FINEST, SessionLog.SQL, "write_CLOB", Long.valueOf(clob.length()), field.getNameDelimited(this));
         } else {
             //do nothing for now, open to BFILE or NCLOB types
         }
